# mediapipe_experiments

./: .env-examples  ASLDataCleaner.py  ASLDataCleanerTemporal.py  ASLGraphDataBuilder.py  ASLRecognitionDemo.py  ASLSignsFromTrainCSV.py  FaceLandmarkerDemo.py  HandGestureClassificationDemo.py  HandLandmarkerDemo.py  HandLandmarkerFingerCounterDemo.py  JSONValidator.py  LandmarksPlayer.py  ParquetFileAnalysis.py  PoseLandmarkerDemo.py  README.md  check_parquet.py  data.pickle  frames_counts.csv  inference_classifier.py  model.p  parquet_file_analysis.txt  pyproject.toml
CNN/: ISLR_1st_place_Hoyeol_Sohn-2.ipynb
GNN/: 1st-place-solution-training.ipynb  Best-GNN-20.ipynb  Best-GNN-5-wAugmentation.ipynb  ISLR_First_Place.ipynb  PyGTemporalTest_001.ipynb  PyGTemporalTest_002.ipynb  PyGTemporalTest_003.ipynb  PyGTemporalTest_004.ipynb  PyGTemporalTest_005.ipynb  PyGTemporalTest_006.ipynb  PyGTemporalTest_007.ipynb  PyGTemporalTest_008.ipynb  PyGTemporalTest_009.ipynb  PyGTemporalTest_010.ipynb  PyGTemporalTest_011.ipynb  PyGTemporalTest_012.ipynb  PyGTemporalTest_013.ipynb  asl_gnn_classification_base.ipynb  asl_gnn_classification_node_temporal_data.ipynb  asl_gnn_classification_node_temporal_data_spatial_data.ipynb  asl_gnn_classification_node_temporal_data_spatial_data_002.ipynb  asl_gnn_classification_node_temporal_data_spatial_data_003.ipynb  asl_gnn_classification_node_temporal_data_spatial_data_004.ipynb  asl_gnn_classification_node_temporal_data_spatial_data_005.ipynb  asl_gnn_classification_node_temporal_data_spatial_data_006.ipynb  asl_gnn_classifier_mark_001.ipynb  (+11 more)
(+8 files in other folders)
