# pyproject.toml

[tool.poetry]
name = "mediapipe-experiments"
version = "0.0.1"
description = "Exploring MediaPipe"
authors = ["Brian Sam-Bodden <bsbodden@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
opencv-python = "^4.8.0.76"
mediapipe = "0.10.5"
numpy = "1.24.3"
python-dotenv = "^1.0.0"
tensorflow = {version = ">=2.13.0", markers = "sys_platform != 'darwin'"}
tensorflow-macos = {version = ">=2.13.0", markers = "sys_platform == 'darwin'"}
pandas = "^2.1.1"
pyarrow = "^13.0.0"
fastparquet = "^2023.8.0"
tqdm = "^4.66.1"
scipy = "^1.11.3"
scikit-learn = "^1.3.1"
